syntax = "proto3";

package net.sf.dz3.view.http.v3;

option java_package = "net.sf.dz3.view.http.v3";
option java_outer_classname = "ZoneSnapshotList";
option optimize_for = LITE_RUNTIME;

/**
 * This message is being sent to the server.
 */

message samples {

	repeated ZoneSnapshot snapshot = 1;
}

message ZoneSnapshot {

    int64 timestamp = 1;
    string name = 2;
    HvacMode mode = 3;
    ZoneState state = 4;
    double signal = 5;
    double currentTemperature = 6;
    double setpointTemperature = 7;
    bool enabled = 8;
    bool onHold = 9;
    bool voting = 10;
    string periodName = 11;
    double deviationSetpoint = 12;
    bool deviationEnabled = 13;
    bool deviationVoting = 14;
    string error = 15;
}

enum HvacMode {

	HVAC_OFF = 0;
	COOLING = -1;
	HEATING = 1;
}

enum ZoneState {

    ZONE_OFF = 0;
    ERROR = -1;
    CALLING = 1;
    HAPPY = 2;
}
